src-ken&y/objects/Facility_Assignment__c.object
<CustomObject>
    <customHelpPage>HelpFacilityAssignment</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Facility Assignments</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Create Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Facility Assignments (Create Product Group)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Replace_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Create/Replace Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facility Assignments (Create/Replace Facility)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Replace_Start_Date__c</fullName>
        <label>Create/Replace Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Ship_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Create Ship-to Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Facility Assignments (Create Ship-to Customer)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Facility_Assignment_Unique__c</fullName>
        <label>Customer Facility Assignment Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Identifier__c</fullName>
        <description>The % and _ wildcards are supported for the LIKE operator.</description>
        <label>Customer Identifier</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facility Assignments (Facility)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Facility Assignments (Product Group)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-to Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Facility Assignments (Ship-to Customer)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Parent Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Facility Assignments (Top Parent Customer)</relationshipLabel>
        <relationshipName>Customer_Facility_Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Facility Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Product_Group__c</columns>
        <columns>Ship_to_Customer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Facility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>